fixed experience portion on mobile size

--- a/src/components/ExpCard/ExpCard.css
+++ b/src/components/ExpCard/ExpCard.css
@@ -72,3 +72,22 @@ h2 {
   animation: jump 0.6s ease-in-out;
   color: #2a2a2a !important;
 }
+
+@media (max-width: 768px) {
+  .experience {
+    flex-direction: column;
+  }
+
+  .left,
+  .right {
+    width: 100%;
+  }
+
+  .label {
+    justify-content: flex-start;
+  }
+  p {
+    margin: 0;
+    font-size: 1rem;
+  }
+}
